--- a/style/ad.css
+++ b/style/ad.css
@@ -1,19 +1,13 @@
-/* #adbanner {
-    position: fixed;
-    top: 0px;
-    width: 100%;
-    height: 40px;
-    background-color: aqua;
-} */
-
 #leadin {
     background-color: white;
     -webkit-transition: background 2s;
     transition: background 2s;
+    animation-delay: 500s;
+
 
     display: block;
     position: sticky;
-    top: -1px;
+    top: 53px;
 
     padding-top: calc(1em + 1px);
 }
@@ -22,7 +16,7 @@ p.isSticky {
     font-family: 'Courier New', Courier, monospace;
     font-weight: 600;
     color: greenyellow;
-
+    z-index: 999;
 }
 
 #adbox {
