--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,27 @@
 body {
     margin: 0;
-    padding: 0;
+    padding: 50px 0 0 0;
+    
+    //font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5rem;
+}
+
+nav {
+    position: fixed;
+    top: 0px;
+    z-index: 999;
+
+    width: 100vw;
+    padding: 5px 0 8px 15px;
+    background-color: rgb(254, 0, 96);
+
+}
+
+section {
+    margin: 0 50px 0 50px;
+    font-family: 'Montserrat', Arial, sans-serif;
+}
+
+#burger {
+    padding: 0 20px 2px 0;
 }
