--- a/style/ad.css
+++ b/style/ad.css
@@ -1,25 +1,63 @@
 #leadin {
-    background-color: white;
-    -webkit-transition: background 2s;
-    transition: background 2s;
+    /* -webkit-transition: background 2s;
+    transition: background 2s; */
     animation-delay: 500s;
-
 
     display: block;
     position: sticky;
-    top: 53px;
+    position: -webkit-sticky;
+    top: 52px;
 
     padding-top: calc(1em + 1px);
 }
 
 p.isSticky {
-    font-family: 'Courier New', Courier, monospace;
     font-weight: 600;
-    color: greenyellow;
-    z-index: 999;
+    color: #258320;
+    z-index: 20;
 }
 
 #adbox {
-    width: 90%;
-    height: 400px;
+    max-width: 100vw;
+    background-color: #000000;
+    display: block;
+}
+
+#adbox p {
+    padding: 0 0 0 0 !important;
+}
+
+#intro {
+    padding: 50px 50px 20px 50px !important;
+}
+
+.spacer {
+    width: 100px;
+    display: block;
+}
+
+.matrixtext {
+    display: block;
+    position: sticky;
+    position: -webkit-sticky;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 600;
+    color: #258320;
+}
+
+#rabbit {
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    width: 300px;
+}
+
+#phonecall {
+    width: 100vw;
+    height: 100vh;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0px;
+    z-index: 50;
+    
+    background-color: red;
 }
