--- a/style/main.css
+++ b/style/main.css
@@ -1,15 +1,19 @@
+html, body {
+    max-width: 100vw;
+}
+
 body {
     margin: 0;
     padding: 50px 0 0 0;
     
-    //font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     line-height: 1.5rem;
 }
 
 nav {
     position: fixed;
     top: 0px;
-    z-index: 999;
+    z-index: 10;
 
     width: 100vw;
     padding: 5px 0 8px 15px;
@@ -17,9 +21,8 @@ nav {
 
 }
 
-section {
-    margin: 0 50px 0 50px;
-    font-family: 'Montserrat', Arial, sans-serif;
+section p, h1 {
+    padding: 0 50px 0 50px;
 }
 
 #burger {
