--- a/style/ad.css
+++ b/style/ad.css
@@ -52,12 +52,112 @@ p.isSticky {
 }
 
 #phonecall {
-    width: 100vw;
+    width: 100%;
+    display: block;
     height: 100vh;
     position: sticky;
     position: -webkit-sticky;
     top: 0px;
     z-index: 50;
     
-    background-color: red;
+    font-family: "Helvetica Neue", Helvetica, 'Arial Narrow', Arial, sans-serif;
+    color: #ffffff;
+    text-align: center;
+    background-color: #000000;
+    background-image: url('../img/white-rabbit.jpg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    padding-top: 70px;
+}
+
+#phonecall h3 {
+    font-weight: 100;
+    font-size: 1em;
+}
+
+#phonecall h2 {
+    font-weight: 400;
+    font-size: 2em;
+}
+
+.phonebtns {
+    text-align: center;
+    position: absolute;
+    bottom: 180px;
+    width: 100%;
+}
+
+.phonebtns a {
+    border: 0;
+    color: #ffffff;
+    text-decoration: none;
+}
+
+#decline {
+    width: 50%;
+    float: left;
+}
+
+#answer {
+    width: 50%;
+    float: left;
+}
+
+#vid {
+    width: 100vw;
+    margin-top: -70px;
+}
+
+#callend {
+    margin-top: 40vh;
+}
+
+#endelem {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0px;
+    margin-left: 0 auto;
+    margin-right: 0 auto;
+    width: 100%;
+    height: 100vh;
+
+    text-align: center;
+    
+}
+
+#cta {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 100px;
+    z-index: 1;
+    font-family: 'Courier New', Courier, monospace;
+    color: #ffffff;
+    font-size: 1.2rem;
+    padding-bottom: 30px;
+}
+
+#cta h4 {
+    margin: 0 0 80px 0;
+    font-size: 2rem;
+}
+
+#matrix-logo {
+    width: 65%;
+    margin-bottom: 50px;
+}
+
+.greenbtn {
+    padding: 12px 20px 12px 20px;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: #96de3d;
+    border: none;
+    border-radius: 50em;
+    font-weight: 600;
+    font-size: 1.3rem;
+    color: #000000;asd
+}
+
+.greenbtn:hover {
+    background-color: #b4ff59;
+    cursor: pointer;
 }
