--- a/style/main.css
+++ b/style/main.css
@@ -1,11 +1,9 @@
 html, body {
-    max-width: 100vw;
+    margin: 0 !important;
 }
 
 body {
-    margin: 0;
     padding: 50px 0 0 0;
-    
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.5rem;
 }
@@ -22,7 +20,7 @@ nav {
 }
 
 section p, h1 {
-    padding: 0 50px 0 50px;
+    padding: 0 25px 0 25px;
 }
 
 #burger {
